--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produk Unggulan Mahasiswa Teknik Informatika UTM</title>
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="script.js" defer></script>
 </head>
 <body class="bg-slate-50 min-h-screen flex flex-col items-center justify-center p-4">
 
     <main class="w-full">
+
+        <img 
+            src="logo-bidang-kecerdasan-komputasional.webp" 
+            alt="Logo Bidang Kecerdasan Komputasional" 
+            class="h-24 w-auto mx-auto mb-4"
+        >
+
         <h1 class="text-3xl md:text-4xl font-extrabold text-center text-slate-800 mb-10">
-            Daftar Link Web Produk Unggulan Mahasiswa Teknik Informatika Universitas Trunojoyo Madura
+            Daftar Produk Unggulan Mahasiswa <br> Teknik Informatika Universitas Trunojoyo Madura
         </h1>
 
         <div id="projects-container" class="w-full max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
